--- a/impressum.html
+++ b/impressum.html
@@ -29,16 +29,18 @@
       </section>
 
       <section class="p-5 rounded-2xl border border-slate-800 bg-slate-900/40">
-        <h2 class="text-xl font-semibold">Umsatzsteuer</h2>
-        <p class="mt-3">
-          Umsatzsteuer-Identifikationsnummer gemäß § 27a UStG: DE... (falls vorhanden)
-        </p>
-      </section>
-
-      <section class="p-5 rounded-2xl border border-slate-800 bg-slate-900/40">
         <h2 class="text-xl font-semibold">Haftung für Inhalte</h2>
         <p class="mt-3 text-sm text-slate-300">
-          Platzhaltertext – bitte mit einer rechtssicheren Fassung ersetzen, passend zu deinem Angebot.
+          <p>
+Als Diensteanbieter sind wir gemäß § 7 Abs. 1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich.
+Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen
+oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.
+</p>
+<p>
+Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt.
+Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich.
+Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
+</p>
         </p>
       </section>
     </div>
