Update contact information in impressum.html

--- a/impressum.html
+++ b/impressum.html
@@ -16,9 +16,9 @@
         <h2 class="text-xl font-semibold">Angaben gemäß § 5 DDG</h2>
         <p class="mt-3">
           <strong>Fulfillbridge</strong><br/>
-          Vorname Nachname / Firma<br/>
-          Straße Hausnr.<br/>
-          PLZ Ort<br/>
+          Joé Willing<br/>
+          Mühltobelstr. 32<br/>
+          72636 Frickenhausen<br/>
           Deutschland
         </p>
         <p class="mt-3">
