--- a/datenschutz.html
+++ b/datenschutz.html
@@ -15,9 +15,10 @@
       <section class="p-5 rounded-2xl border border-slate-800 bg-slate-900/40">
         <h2 class="text-xl font-semibold">1. Verantwortlicher</h2>
         <p class="mt-3">
-          Vorname Nachname / Firma<br/>
-          Straße Hausnr.<br/>
-          PLZ Ort<br/>
+          Joé Willing<br/>
+          Mühltobelstr. 32<br/>
+          72636 Frickenhausen
+          Deutschland<br/>
           E-Mail: fulfillbridge@hotmail.com
         </p>
       </section>
@@ -40,16 +41,41 @@
         </p>
       </section>
 
-      <section class="p-5 rounded-2xl border border-slate-800 bg-slate-900/40">
-        <h2 class="text-xl font-semibold">4. Deine Rechte</h2>
-        <p class="mt-3">
-          Du hast u. a. das Recht auf Auskunft, Berichtigung, Löschung, Einschränkung der Verarbeitung und Datenübertragbarkeit,
-          sowie ein Beschwerderecht bei einer Aufsichtsbehörde.
-        </p>
-        <p class="mt-3 text-sm text-slate-300">
-          Platzhaltertext – bitte an deine tatsächlichen Tools/Einbindungen (Analytics, Marketing-Pixel, Hosting-Anbieter etc.) anpassen.
-        </p>
-      </section>
+     <section class="p-5 rounded-2xl border border-slate-800 bg-slate-900/40">
+  <h2 class="text-xl font-semibold">4. Deine Rechte</h2>
+
+  <p class="mt-3">
+    Du hast als betroffene Person folgende Rechte nach der DSGVO:
+  </p>
+
+  <ul class="mt-3 list-disc pl-6 space-y-2 text-slate-200">
+    <li><strong>Auskunft</strong> (Art. 15 DSGVO)</li>
+    <li><strong>Berichtigung</strong> (Art. 16 DSGVO)</li>
+    <li><strong>Löschung</strong> (Art. 17 DSGVO)</li>
+    <li><strong>Einschränkung der Verarbeitung</strong> (Art. 18 DSGVO)</li>
+    <li><strong>Datenübertragbarkeit</strong> (Art. 20 DSGVO)</li>
+    <li>
+      <strong>Widerspruch</strong> gegen Verarbeitung auf Grundlage berechtigter Interessen sowie
+      jederzeitiger <strong>Widerspruch gegen Direktwerbung</strong> (Art. 21 DSGVO)
+    </li>
+    <li><strong>Widerruf</strong> erteilter Einwilligungen mit Wirkung für die Zukunft (Art. 7 Abs. 3 DSGVO)</li>
+    <li><strong>Beschwerde</strong> bei einer Aufsichtsbehörde (Art. 77 DSGVO)</li>
+  </ul>
+
+  <p class="mt-4 text-slate-200">
+    Zur Ausübung deiner Rechte genügt eine formlose Mitteilung an:
+    <strong>[fulfillbridge@hotmail.com]</strong>.
+  </p>
+
+  <p class="mt-4 text-slate-200">
+    Zuständige Aufsichtsbehörde in Baden-Württemberg:
+    <br />
+    <strong>Der Landesbeauftragte für den Datenschutz und die Informationsfreiheit Baden-Württemberg (LfDI BW)</strong><br />
+    Hausanschrift: Heilbronner Straße 35, 70191 Stuttgart<br />
+    Postanschrift: Postfach 10 29 32, 70025 Stuttgart<br />
+    E-Mail: poststelle@lfdi.bwl.de
+  </p>
+</section>
     </div>
   </main>
 
