--- a/impressum.html
+++ b/impressum.html
@@ -24,7 +24,7 @@
         <p class="mt-3">
           <strong>Kontakt</strong><br/>
           E-Mail: fulfillbridge@hotmail.com<br/>
-          Telefon: +49 ...
+          Telefon: +49 157 53991998
         </p>
       </section>
 
