--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@
       <div class="mt-6 grid lg:grid-cols-3 gap-4">
         <div class="lg:col-span-2 p-5 rounded-2xl bg-slate-950 border border-slate-800">
           <div class="text-sm font-semibold">Kontakt</div>
-          <p class="mt-2 text-sm text-slate-400">Trage hier deine Kontaktdaten ein und wir melden uns. (mail-to als Platzhalter)</p>
-          <p class="mt-2 text-sm text-slate-400">Oder direkt auf LinkedIn: <a class="text-blue-300 hover:text-white underline" href="https://www.linkedin.com/in/DEINPROFIL" target="_blank" rel="noopener">Profil öffnen</a></p>
+          <p class="mt-2 text-sm text-slate-400">Trage hier deine Kontaktdaten ein und wir melden uns. </p>
+          <p class="mt-2 text-sm text-slate-400">Oder driekt auf LinkedIn:<a class="text-blue-300 hover:text-white underline" href="https://www.linkedin.com/in/fulfillbridge-dach-8832b03a8/" target="_blank" rel="noopener">Profil öffnen</a></p>
           <form class="mt-4 grid sm:grid-cols-2 gap-3" onsubmit="return handleContact(event)">
             <input required name="c_name" class="px-3 py-2 rounded-xl bg-slate-950 border border-slate-800 focus:outline-none focus:ring-2 focus:ring-blue-600" placeholder="Name" />
             <input required type="email" name="c_email" class="px-3 py-2 rounded-xl bg-slate-950 border border-slate-800 focus:outline-none focus:ring-2 focus:ring-blue-600" placeholder="E-Mail" />
