--- a/impressum.html
+++ b/impressum.html
@@ -23,7 +23,7 @@
         </p>
         <p class="mt-3">
           <strong>Kontakt</strong><br/>
-          E-Mail: fulfillbridge@hotmail.com<br/>
+          E-Mail: joewilling@fulfillbridge.de<br/>
           Telefon: +49 157 53991998
         </p>
       </section>
