Update email address in toMailto function

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     document.getElementById('y').textContent = new Date().getFullYear();
 
     function toMailto(subject, body) {
-      const to = 'fulfillbridge@hotmail.com'; // TODO: ersetzen
+      const to = 'joewilling@fulfillbridge.de'; // TODO: ersetzen
       const url = `mailto:${encodeURIComponent(to)}?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
       window.location.href = url;
     }
